@@ -1,6 +1,6 @@
 Package: lokern
-Version: 1.1-10.1
-Date: 2023-12-07
+Version: 1.1-11
+Date: 2024-04-18
 Title: Kernel Regression Smoothing with Local or Global Plug-in
         Bandwidth
 Author: Eva Herrmann <eherrmann@mathematik.tu-darmstadt.de> (F77 & S original);
@@ -17,6 +17,6 @@ URL: https://curves-etc.r-forge.r-project.org/,
 BugReports: https://r-forge.r-project.org/R/?group_id=846
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2023-12-07 15:18:40 UTC; maechler
+Packaged: 2024-04-18 10:11:57 UTC; maechler
 Repository: CRAN
-Date/Publication: 2023-12-07 16:00:02 UTC
+Date/Publication: 2024-04-18 10:52:40 UTC
