@@ -1,20 +1,20 @@
-1cae7acce4743347154203a2e3c68549 *ChangeLog
-75d3c6d9b8e4a25d1073c664b7885772 *DESCRIPTION
+644df35545783ae876e1c1bc7375f6b8 *ChangeLog
+2431e30477f86319bf3950995b4d76e5 *DESCRIPTION
 261ea31101d70d0ff7f254254a47b334 *NAMESPACE
 a10efafa333ea559e26e33a5a3678028 *R/glkerns.R
 acc7e58d139a036eb5bfb2c457439cfc *R/lokerns.R
 72021489aa3b3f188d551d3ec334f12d *R/varNPreg.R
 7f8baf16cbc71096086622419aa9c983 *TODO
-8faf250d78a120ba4c7ea2186efddd24 *build/partial.rdb
+f61db891eb928123aba4412ca322f508 *build/partial.rdb
 7bfe6f509f3f78270aa0fc5386a767f5 *data/xSim.R
 5ddd8e6247f6edfbf9b2fef6c2f1e067 *demo/00Index
 ffb4f64e60ebd9b2b6f27b3fe0f8dbe7 *demo/glk-derivs.R
 dd1962846b03e74fcf0ff59d07538a9e *man/KernS-methods.Rd
-ac34cd2d6d14565e7939601404c34152 *man/glkerns.Rd
+7c3ee891861fc105b8b707fd9ecd6896 *man/glkerns.Rd
 912dfcb3d2e30d910560d9a083d2f994 *man/lokerns.Rd
-afa8930b5a0abc0e4bae06cfa5f5b39a *man/varNPreg.Rd
+ba890237f63732a049ef79fc07b89ce7 *man/varNPreg.Rd
 c1b8ef3e923f7635af83253b221b7fac *man/xSim.Rd
-418e9eddea16dca35908ad4c9a2c4c63 *src/auxkerns.f
+f228cff0cf14c86be337619caabdb076 *src/auxkerns.f
 51df9e6142bac62ec311c5b75e72075d *src/glkerns.f
 7825b792b074073447f66f18fcc64ade *src/init.c
 bd738b4ef393563f0783b5d0ce4cc930 *src/lokerns.f
